# streamlit-supabase-auth

./: .gitignore  DEVELOPMENT.md  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  pyproject.toml
.github/workflows/: deploy.yaml
examples/: demo.py
src/public/: index.html
